# PeaceSleep

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/ui/: IconSet.qml  Main.qml  PDragSound.qml  PDropSound.qml  PMediaPlayer.qml  PMenu.qml  SoundBall.qml  SoundBallCreator.js  SoundSet.qml  VolumeCurve.qml
src/ui/PComponent/: PButton.qml  PDial.qml  PMenu.qml
src/ui/assets/appIcon/: PeaceSleep.rc
src/utils/: systemhelper.cpp  systemhelper.h
